changes to make it work on windows

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,17 +10,41 @@ SET(PROJECT_EXE "${PROJECT_NAME}")
 set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmakeModules")
 
 FIND_PACKAGE(OpenGL REQUIRED)
-FIND_PACKAGE(GLFW REQUIRED)
-FIND_PACKAGE(GLEW REQUIRED)
-FIND_PACKAGE(GLM REQUIRED)
 FIND_PACKAGE(Boost REQUIRED)
+
+add_subdirectory (external)
+
+include_directories(
+	external/AntTweakBar-1.16/include/
+	external/glfw-3.0.3/include/GLFW/
+	external/glm-0.9.4.0/
+	external/glew-1.9.0/include/
+	external/assimp-3.0.1270/include/
+	external/bullet-2.81-rev2613/src/
+	.
+)
+
+set(ALL_LIBS
+	${OPENGL_LIBRARY}
+	GLFW_303
+	GLEW_190
+)
+
+add_definitions(
+	-DTW_STATIC
+	-DTW_NO_LIB_PRAGMA
+	-DTW_NO_DIRECT3D
+	-DGLEW_STATIC
+	-D_CRT_SECURE_NO_WARNINGS
+)
+
 
 #Librearies for loading images and 3d models, not needed for the moment
 #FIND_PACKAGE(FreeImageplus REQUIRED)
 #FIND_PACKAGE(ASSIMP REQUIRED)
 
+include_directories(glfw/include)
 INCLUDE_DIRECTORIES( ${OPENGL_INCLUDE_DIRS} )
-INCLUDE_DIRECTORIES( ${GLFW_INCLUDE_DIRS} )
 INCLUDE_DIRECTORIES( ${GLEW_INCLUDE_DIRS} )
 INCLUDE_DIRECTORIES( ${GLM_INCLUDE_DIRS} )
 INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS})
@@ -59,8 +83,7 @@ ADD_EXECUTABLE(${PROJECT_EXE} ${SOURCE} ${HEADERS})
 
 #OpenGL linking
 TARGET_LINK_LIBRARIES(${PROJECT_EXE} ${OPENGL_LIBRARIES})
-TARGET_LINK_LIBRARIES(${PROJECT_EXE} ${GLFW_LIBRARIES})
-TARGET_LINK_LIBRARIES(${PROJECT_EXE} ${GLEW_LIBRARIES})
+#target_link_libraries(${PROJECT_EXE} glfw ${GLFW_LIBRARIES})
 TARGET_LINK_LIBRARIES(${PROJECT_EXE} ${Boost_LIBRARIES})
 
 #TARGET_LINK_LIBRARIES(${PROJECT_EXE} ${FREEIMAGEPLUS_LIBRARIES})
@@ -68,4 +91,4 @@ TARGET_LINK_LIBRARIES(${PROJECT_EXE} ${Boost_LIBRARIES})
 
 #Extra linking for x11 enviroments
 #TODO Check libraries flags on windows
-TARGET_LINK_LIBRARIES(${PROJECT_EXE} -lX11 -lXrandr -lXi -lXxf86vm -lpthread)
+TARGET_LINK_LIBRARIES(${PROJECT_EXE} ${ALL_LIBS})
