Added SimulationSolver class

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -46,6 +46,7 @@ src/Line.cpp
 src/PrimitiveParameter.cpp
 src/Renderer.cpp
 src/ShaderLoader.cpp
+src/SimulationSolver.cpp
 src/Square.cpp
 src/Triangle.cpp
 src/VertexObject.cpp
@@ -62,6 +63,7 @@ src/Line.h
 src/PrimitiveParameter.h
 src/Renderer.h
 src/ShaderLoader.h
+src/SimulationSolver.h
 src/Square.h
 src/Triangle.h
 src/VertexObject.h
