Move files into folder
The number of files was getting to big to be displayed on only one
folder

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -38,39 +38,39 @@ INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS})
 
 SET(SOURCE
 src/main.cpp
-src/Axis.cpp
-src/Bone.cpp
-src/Chain.cpp
-src/FPSCounter.cpp
-src/Joint.cpp
-src/Line.cpp
-src/PrimitiveParameter.cpp
-src/Renderer.cpp
-src/ShaderLoader.cpp
-src/SimulationController.cpp
-src/SimulationSolver.cpp
-src/Square.cpp
-src/Triangle.cpp
-src/VertexObject.cpp
+src/models/Axis.cpp
+src/models/Bone.cpp
+src/models/Chain.cpp
+src/models/Joint.cpp
+src/models/Line.cpp
+src/models/PrimitiveParameter.cpp
+src/models/Square.cpp
+src/models/Triangle.cpp
+src/models/VertexObject.cpp
+src/rendering/Renderer.cpp
+src/rendering/ShaderLoader.cpp
+src/rendering/FPSCounter.cpp
+src/simulation/SimulationController.cpp
+src/simulation/SimulationSolver.cpp
 src/Window.cpp
 )
 
 SET(HEADERS
-src/Axis.h
-src/Bone.h
-src/Chain.h
-src/Drawable.h
-src/FPSCounter.h
-src/Joint.h
-src/Line.h
-src/PrimitiveParameter.h
-src/Renderer.h
-src/ShaderLoader.h
-src/SimulationController.h
-src/SimulationSolver.h
-src/Square.h
-src/Triangle.h
-src/VertexObject.h
+src/models/Axis.h
+src/models/Bone.h
+src/models/Chain.h
+src/models/Drawable.h
+src/models/Joint.h
+src/models/Line.h
+src/models/PrimitiveParameter.h
+src/models/Square.h
+src/models/Triangle.h
+src/models/VertexObject.h
+src/rendering/Renderer.h
+src/rendering/ShaderLoader.h
+src/rendering/FPSCounter.h
+src/simulation/SimulationController.h
+src/simulation/SimulationSolver.h
 src/Window.h
 )
 
