Added PointSet class that draw collections of points

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -44,6 +44,7 @@ src/models/Chain.cpp
 src/models/Joint.cpp
 src/models/Line.cpp
 src/models/Point.cpp
+src/models/PointSet.cpp
 src/models/PrimitiveParameter.cpp
 src/models/Square.cpp
 src/models/Triangle.cpp
@@ -64,6 +65,7 @@ src/models/Drawable.h
 src/models/Joint.h
 src/models/Line.h
 src/models/Point.h
+src/models/PointSet.h
 src/models/PrimitiveParameter.h
 src/models/Square.h
 src/models/Triangle.h
